new code added (indexController, productsController, products, index, products ejs and js, etc...)

--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -66,7 +66,10 @@
                                     <a class="nav-link active" aria-current="page" href="#">LISTA DE DESEOS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Español Latinoamerica | ARS</a>
+                                    <a class="nav-link active" aria-current="page" href="#">CREAR NUEVO PRODUCTO </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="/products/productsLoad">Español Latinoamerica | ARS</a>
                                 </li>
                             </ul>
                         </div>
