--- a/estructura de archivos/src/views/products/productEdit.ejs
+++ b/estructura de archivos/src/views/products/productEdit.ejs
@@ -60,6 +60,7 @@
                                     <option value="ubisoft"<%= productToEdit.category === 'ubisoft' && 'selected' %>>Ubisoft</option>
                                     <option value="battle.net"<%= productToEdit.category === 'battle.net' && 'selected' %>>Battle.net</option>
                                     <option value="otro"<%= productToEdit.category === 'otro' && 'selected' %>>Otro</option>
+                                </select>
                             </div>
 
                             <div class="form-box load-image">
