--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -44,6 +44,9 @@
                         <div class="edit__product">
                             <a href="/products/productEdit/<%= product.id %>"><button type="submit" name="favorites"><i class="fa-solid fa-heart"></i> Editar producto</button></a>
                         </div>
+                        <form action="/products/delete/<%= product.id %>?_method=delete" method="POST" style="display: inline-flex">
+                            <button type="submit" class="action-button delete">ELIMINAR</button>
+                        </form>
                     </article>
                 </section>
                 <section class="detail__product__features">
