--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -64,16 +64,16 @@
                         </div>
                         <div class="form-box">
 
-                        <label class="form__label">Compañía:</label>
-                        <select name="company" id="">
+                        <label class="form__label">Companía:</label>
+                        <select name="company" id="company">
                         <option value="" hidden selected>Seleccionar...</option>
-                        <option value="5">Xbox</option>
-                        <option value="">Microsoft</option>
-                        <option value="">Steam</option>
-                        <option value="8">PSN</option>
-                        <option value="">Ubisoft</option>
-                        <option value="">Battle.net</option>
-                        <option value="">Otro</option>
+                        <option value="xbox">Xbox</option>
+                        <option value="microsoft">Microsoft</option>
+                        <option value="steam">Steam</option>
+                        <option value="psn">PSN</option>
+                        <option value="ubisoft">Ubisoft</option>
+                        <option value="battle.net">Battle.net</option>
+                        <option value="otro">Otro</option>
                         </div>
                         <div class="form-box load-image">
                             <label class="form__label" for="imagen">Añadir Imágenes:</label>
