--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -21,7 +21,7 @@
                 </div>
                 <div class="offcanvas offcanvas-end  offcanvas-end-edited text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                     <div class="offcanvas-header">
-                        <a class="header--figure-logo" href="/"><img src="/images/logo2.png" alt=""></a>
+                        <a class="header--figure-logo" href="/index"><img src="/images/logo2.png" alt=""></a>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
@@ -49,7 +49,10 @@
                                 <a class="nav-link active" aria-current="page" href="#">LISTA DE DESEOS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Espñaol Latinoamerica | ARS</a>
+                                <a class="nav-link active" aria-current="page" href="/products/productsLoad"><i class="fa-solid fa-plus"></i> CREAR NUEVO PRODUCTO </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Español Latinoamerica | ARS</a>
                             </li>
                         </ul>
                     </div>
@@ -57,6 +60,9 @@
             </div>
             <div class="header_div">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 header_div--navbar-desktop">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/products/productsLoad"><i class="fa-solid fa-plus"></i> Crear nuevo producto </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Tienda</a>
                     </li>
@@ -88,7 +94,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Software</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Espñaol Latinoamerica | ARS</a>
+                        <a class="nav-link active" aria-current="page" href="#">Español Latinoamerica | ARS</a>
                     </li>
                 </ul>
             </div>
