--- a/estructura de archivos/src/views/partials/product.ejs
+++ b/estructura de archivos/src/views/partials/product.ejs
@@ -1,16 +1,18 @@
 
-    <article class="main__section--product-article ">
-        <img class="main__section--product-img-key" src="/images/gift-card-playstation.jpeg " alt="xbox-key ">
+    <a href="/products/productDetail/<%= id %>" class="main__section--product-article ">
+    <article>
+        <img class="main__section--product-img-key" src="/images/<%= image %>  " alt="xbox-key ">
         <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
         <div class="main__section--product-content_offers ">
             <div class="main-section-global-region ">
-                <p class="main__section--product-region ">Estados Unidos</p>
+                <p class="main__section--product-region ">Argentina</p>
                 <p class="main__section--product-ubication ">Desde</p>
             </div>
             <div class="main-section-price-ofert ">
-                <p class="main__section--product-price ">$ 9999</p>
-                <p class="main__section--product-discount ">5% OFF</p>
+                <p class="main__section--product-price ">$ <%= price %> </p>
+                <p class="main__section--product-discount "><%= discount %>% OFF</p>
             </div>
-            <p class="main__section--product-description ">PlayStation Network Card 75 USD (USA) PSN Key Estados Unidos</p>
+            <p class="main__section--product-description "><%= name %></p>
         </div>
-    </article>
+    </article>    
+    </a>
