--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -12,7 +12,7 @@
     <!-- M A I N -->
     <main id="products__main">
                 <div class="products-caja">
-                    <div class="">
+                    <div>
                         <h3 class="products-titulo">Cargar nuevo producto</h3>
                     </div>
                     <form action="" method="post">
