--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -6,10 +6,15 @@
                 <span class="navbar-toggler-icon"></span></button>
                 <a class="header--figure-logo" href="/"><img src="/images/logo2.png" alt=""></a>
                 <div class="header__top--general-navigation_button">
-                    <div class="header__top--search">
+                    <!-- <div class="header__top--search">
                         <input type="text" placeholder="Buscar" required>
                         <div class="header__top--search-button"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                    </div>
+                    </div>-->
+                    <form action="/search" class="header__top--search">
+                        <input type="text" name="keywords" placeholder="Buscar" required>
+                        <div class="header__top--search-button"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                    </form>
+
                     <button><a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i></a></button>
                     <li class="nav-item dropdown header__top--login">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-user"></i></a>
