login register updated userprofile created

--- a/estructura de archivos/public/css/styles.css
+++ b/estructura de archivos/public/css/styles.css
@@ -3,13 +3,11 @@
 @import'/css/index.css';
 @import'/css/productDetail.css';
 @import'/css/cart.css';
-@import'/css/login.css';
-@import'/css/register.css';
 @import'/css/footer.css';
 @import'/css/header.css';
 @import'/css/aboutUs.css';
 @import'/css/favourites.css';
-@import'/css/userProfile.css';
 @import'/css/shopping.css';
 @import'/css/productsLoad.css';
 @import'/css/results.css';
+@import'/css/log-reg-profile.css';
