--- a/estructura de archivos/src/views/users/register.ejs
+++ b/estructura de archivos/src/views/users/register.ejs
@@ -2,60 +2,57 @@
 <html lang="en">
     <%- include('../partials/head',{ title:'home', }) %>
 
-<body id="register">
-    <div class="body__container1">
-        <header>
-            <div class="header__container1">
-                <section class="header__container--register1">
-                    <h2>REGISTRARSE</h2>
-                </section>
-                <section class="header__container--login1">
-                    <a href="/users/login">
-                        <h2>INICIAR SESIÓN</h2>
-                    </a>
-                </section>
-            </div>
-        </header>
-        <main>
-            <div class="main__container1">
-                <section class="main__container--data1">
-                    <form action="" method="POST">
-                        <article class="fullName1">
-                            <i class="fa-solid fa-user"></i><label for="name">Nombre Completo:</label>
-                            <input type="text" placeholder="Ingresá tu nombre completo" id="name" name="name" required>
-                        </article>
-                        <article class="email1">
-                            <i class="fa-solid fa-paper-plane"></i><label for="email">Email:</label>
-                            <input type="email" placeholder="Ingresá tu email" id="email" name="email" required>
-                        </article>
-                        <article class="userName1">
-                            <i class="fa-solid fa-user-astronaut"></i><label for="username">Nombre de Usuario:</label>
-                            <input type="text" placeholder="Elegí tu nombre de usuario" id="username" name="username" required>
-                        </article>
-                        <article class="password1">
-                            <i class="fa-solid fa-keyboard"></i><label for="password">Contraseña:</label>
-                            <input type="password" placeholder="Ingresá tu contraseña" id="password" name="password" minlength="8" maxlength="25" required>
-                        </article>
-                        <article class="rePass1">
-                            <i class="fa-solid fa-unlock-keyhole"></i><label for="repass">Confirmar Contraseña:</label>
-                            <input type="repass" placeholder="Reingresá tu contraseña" id="repass" name="repass" required>
-                        </article>
-                        <input type="submit" value="CREAR CUENTA">
-                    </form>
-                </section>
-            </div>
-        </main>
-        <footer>
-            <div class="footer__container1">
-                <section class="footer__container1--loginPage">
-                    <div class="loginPage">
-                        <p>¿Ya tenés una cuenta?</p>
-                        <a href="/users/login">¡Iniciá sesión!</a>
+    <body id="b0dy__c0nt41n3r">
+        <div class="body--form">
+            <figure class="body__form__image--container">
+                <a href="/home">
+                    <img src="/images/DALF proyecto logo 3 LIMPIO.png" alt="logo">
+                </a>
+            </figure>
+            <div class="body__form--box">
+                <div class="body__form--title">
+                    <h2>Registrarse</h2>
+                </div>
+                <form action="#">
+                    <div class="body__form--inputs">
+                        <div class="body__form__inputs--userData">
+                            <div class="body__form__inputs__userData--input">
+                                <label for="fullName">Nombre completo:</label>
+                                <input type="text" placeholder="Nombre completo" id="fullName" name="fullName" required>
+                            </div>
+                            <div class="body__form__inputs__userData--input">
+                                <label for="email">Email:</label>
+                                <input type="email" placeholder="E-mail" id="email" name="email" required>
+                            </div>
+                            <div class="body__form__inputs__userData--input">
+                                <label for="userName">Nombre de usuario:</label>
+                                <input type="text" placeholder="Nombre de usuario" id="userName" name="userName" required>
+                            </div>
+                            <div class="body__form__inputs__userData--input">
+                                <label for="bday">Fecha de nacimiento:</label>
+                                <input type="date" placeholder="Fecha de nacimiento" id="bday" name="bday" required>
+                            </div>
+                            <div class="body__form__inputs__userData--input">
+                                <label for="pass">Contraseña:</label>
+                                <input type="password" placeholder="Contraseña" id="pass" name="pass" minlength="8" maxlength="25" required>
+                            </div>
+                            <div class="body__form__inputs__userData--input">
+                                <label for="repass">Confirmar contraseña:</label>
+                                <input type="password" placeholder="Confirmar contraseña" id="repass" name="repass" required>
+                            </div>
+                        </div>
+                        <div class="body__form__button--btn">
+                            <button type="submit">CREAR CUENTA</button>
+                        </div>
                     </div>
-                </section>
+                </form>
+                <div class="body__form__redirect">
+                    <div class="body__form__redirect--login">
+                        <a href="/users/login">¿Ya tenés una cuenta?</a>
+                    </div>
+                </div>
             </div>
-        </footer>
-    </div>
-</body>
+        </div>
+    </body>
 
 </html>
