--- a/estructura de archivos/public/css/results.css
+++ b/estructura de archivos/public/css/results.css
@@ -1,24 +1,55 @@
 
 /* M A I N  */
 .main__result{
-    padding-top: 9rem;
-    padding-bottom: 6rem;
-    width: 100%;
+    padding-top: 100px;
 }
 
 .main__result-all{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
 }
 
 .main__result-products{
-    width: 43%;
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+    flex-wrap: wrap;
 }
+
+
+@media (min-width: 768px){
+.main__section--product-result {
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+}
+
 @media (min-width: 1024px) {
     .main__result-products{
         width: 100%;
     }
 }
+
+@media (min-width: 1440px) {
+
+    .main__result{
+        padding-top: 100px;
+    }
+    .main__result-products{
+    width: 43%;
+    }
+    
+}
+
+box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Open Sans';
+    text-decoration: none;
+
+
+/* vamos a carrear a fede y a luca c: */
